actualizando el link de video para que funcione en la maquina de Neto

--- a/teledot.html
+++ b/teledot.html
@@ -102,10 +102,10 @@
         <span class="close" onclick="closeVideoModal()">&times;</span>
         <h2>¿Cómo usar el APP Mi Consulta por primera vez?</h2>
         <video id="videoPlayer" controls>
-          <source src="./assets/video/App EsSalud MiConsulta - REGISTRO.mp4" type="video/mp4" />
+          <source src="/Users/cenate2/PortalWeb/Video" type="video/mp4" />
           Tu navegador no soporta la reproducción de este video.
         </video>
-        <a href="./assets/video/App EsSalud MiConsulta - REGISTRO.mp4" download="tutorial.mp4" class="download-btn">Descargar Video</a>
+        <a href="/Users/cenate2/PortalWeb/Video" download="tutorial.mp4" class="download-btn">Descargar Video</a>
       </div>
     </div>
 
