actualizando el link de video para que funcione en la maquina de Neto version 2

--- a/teledot.html
+++ b/teledot.html
@@ -105,7 +105,7 @@
           <source src="/Users/cenate2/PortalWeb/Video" type="video/mp4" />
           Tu navegador no soporta la reproducción de este video.
         </video>
-        <a href="/Users/cenate2/PortalWeb/Video" download="tutorial.mp4" class="download-btn">Descargar Video</a>
+        <a href="../Video/App EsSalud MiConsulta - REGISTRO.mp4" download="tutorial.mp4" class="download-btn">Descargar Video</a>
       </div>
     </div>
 
