actualizando el video

--- a/teledot.html
+++ b/teledot.html
@@ -101,11 +101,18 @@
       <div class="modal-content">
         <span class="close" onclick="closeVideoModal()">&times;</span>
         <h2>¿Cómo usar el APP Mi Consulta por primera vez?</h2>
-        <video id="videoPlayer" controls>
-          <source src="/Users/cenate2/PortalWeb/Video" type="video/mp4" />
-          Tu navegador no soporta la reproducción de este video.
-        </video>
-        <a href="../Video/App EsSalud MiConsulta - REGISTRO.mp4" download="tutorial.mp4" class="download-btn">Descargar Video</a>
+        <div className="flex justify-center">
+          <iframe 
+            src="https://player.vimeo.com/video/1052370003?h=f6fee70090&amp;title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+            width="550" 
+            height="370" 
+            frameborder="0" 
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" 
+            title="App EsSalud MiConsulta - REGISTRO_BAJA">
+          </iframe>
+        </div>
+        
+       
       </div>
     </div>
 
