Modificando el link de Anatpat

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
           <div
           class="card"
-          onclick="window.open('http://10.0.0.213/ANATPAT/', '_blank');"
+          onclick="window.open('http://anatpat.essalud/ANATPAT/', '_blank');"
         >
           <img
             src="./assets/img/Anatomia patologica.svg"
