Buzon de suferencias

--- a/index.html
+++ b/index.html
@@ -541,6 +541,21 @@ class="card"
             <span style="font-size: 12px">Ver pestaña 7</span>
             <!-- Indicador de nuevo -->
           </div>
+
+
+          <div
+            class="card"
+            onclick="window.open('https://forms.gle/QCQMNcvreA6JkTxP8', '_blank');">
+            <img
+              src="./assets/img/Iconos_ESSI.svg"
+              alt="Speech Atención "
+              class="card-img"
+              style="width: 80px; height: auto" />
+            <span>Buzon de sugerencias</span>
+            <span class="new-badge" style="display: inline-block; margin-top: 8px; background-color: #28a745; color: white; padding: 2px 8px; border-radius: 10px; font-size: 12px;">Nuevo</span>
+            
+            <!-- Indicador de nuevo -->
+          </div>
         </div>
       </div>
       <!--SECTION 2-->
