Actualizando el link

--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
         <div class="main-panel__content">
           <div
             class="card"
-            onclick="window.open('https://docs.google.com/spreadsheets/d/12snfDNG_zV4ThfDI2NDcW_paIi86cLJb1OQ1AJYuFpY/edit?gid=1261864205#gid=1261864205', '_blank');">
+            onclick="window.open('https://docs.google.com/spreadsheets/d/1NNM4jmm-rpxMBxLsBbqnmCvkxQMlnK5vBLxsVg2jWbI/edit?gid=0#gid=0', '_blank');">
             <img
               src="./assets/img/Iconos_Informacion para personal asistencial.svg"
               alt="Speech Atención "
               class="card-img"
               style="width: 80px; height: auto" />
-            <span>Información para personal asistencial</span>
+            <span>Ubicaciones en Teleconsultorios y PC</span>
             <span style="font-size: 12px"
-              >Horario - Teleconsultorio - Ubicación</span
+              >Rol Mensual de la Programación Asistencial</span
             >
           </div>
 
