Corrigiendo el nombre de CENACRON

--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
             class="card">
             <img
               src="./assets/img/Iconos_Informacion de las IPRESS.svg"
-              alt="CENECRON"
+              alt="CENACRON"
               style="width: 80px; height: auto" />
             <span style="display: block; font-weight: bold; margin-top: 10px"
-              >CENECRON</span
+              >CENACRON</span
             >
             <span style="font-size: 12px"
               >Estrategia de Atención de Pacientes Controlados mediante
