--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <div id="videoModal" class="tutoriales-overlay" style="display: none">
           <div class="tutoriales-content">
             <button id="cerrarVideoModal" class="tutoriales-btn-close" onclick="closeVideoModal()">X</button>
-            <h3 class="tutoriales-heading">Tutoriales Educativos CENATE</h3>
+            <h3  class="mesa-ayuda-titulo">Tutoriales Educativos CENATE</h3>
 
             <div class="tutoriales-scrollable">
               <div class="tutoriales-video-grid">
