actualizando card de pacientes A-N

--- a/index.html
+++ b/index.html
@@ -356,7 +356,19 @@
         </div>
 
 
-
+        <div
+        class="card"More actions
+        onclick="window.open('https://docs.google.com/spreadsheets/d/1FQPw2nPaRM74CXLOZ1nvFQR08qXQS8rwccPIRlHPCZ4/edit?gid=1416608776#gid=1416608776', '_blank');">
+        <img
+          src="./assets/img/Iconos_listado de pacientes TC A-N.svg"
+          alt="Speech Atención "
+          class="card-img"
+          style="width: 60px; height: auto" />
+        <span
+          ><br />
+          Listado de pacientes TC (A-N)</span
+        >
+      </div>
 
 
         <div class="card"
