--- a/index.html
+++ b/index.html
@@ -194,9 +194,17 @@
           onclick="window.open('https://docs.google.com/spreadsheets/d/1NNM4jmm-rpxMBxLsBbqnmCvkxQMlnK5vBLxsVg2jWbI/edit?gid=0#gid=0', '_blank');">
           <img src="./assets/img/Iconos_Informacion para personal asistencial.svg" alt="Speech Atención "
             class="card-img" style="width: 80px; height: auto" />
-          <span>Ubicaciones en Teleconsultorios y PC</span>
-          <span style="font-size: 12px">Rol Mensual de la Programación Asistencial</span>
+          <span>Ubicaciones de Teleconsultorios y PC</span>
+          <span style="font-weight: 700; font-size: 12px">Para Teleconsulta y Teleorientación</span>
         </div>
+
+        <div class="card"
+        onclick="window.open('https://docs.google.com/spreadsheets/d/12snfDNG_zV4ThfDI2NDcW_paIi86cLJb1OQ1AJYuFpY/edit?gid=1679895487#gid=1679895487', '_blank');">
+        <img src="./assets/img/Iconos_Informacion para personal asistencial.svg" alt="Speech Atención "
+          class="card-img" style="width: 80px; height: auto" />
+        <span>Ubicaciones PC</span>
+        <span style="font-weight: 700 ; font-size: 12px">Para Teleurgencias y CENACRON</span>
+      </div>
 
         <div class="card"
           onclick="window.open('https://us02web.zoom.us/j/81483580541?pwd=9JHZ44eQKPv11MuTATtuyw9jDf9uJ7.1', '_blank');">
