Nuevas opciones para firma digital

--- a/index.html
+++ b/index.html
@@ -574,7 +574,33 @@
                 </div>
               </div>
 
+               <!-- Opción 6 - ReFirma PDF -->
+               <div class="util-subgrid-item">
+                <h4 class="util-item-title">ReFirma PDF</h4>
+                <div class="util-item-content">
+                  <a href="https://dsp.reniec.gob.pe/refirma_suite/pdf/web/main.jsf" target="_blank" class="util-img-link">
+                    <img src="./assets/img/refirmapdf.png" alt="DNIe 3.0" class="util-item-img">
+                  </a>
+                </div>
+              </div>
+
+                <!-- Opción 7 - ReFirma PDF PCX -->
+                <div class="util-subgrid-item">
+                  <h4 class="util-item-title">ReFirma PCX</h4>
+                  <div class="util-item-content">
+                    <a href="https://dsp.reniec.gob.pe/refirma_suite/pcx/web/main.jsf" target="_blank" class="util-img-link">
+                      <img src="./assets/img/refirmapcx.png" alt="DNIe 3.0" class="util-item-img">
+                    </a>
+                  </div>
+                </div>
+
+
+               
     </div>
+    <p class="util-modal-footer">
+      Para que funcione la firma digital el sistema operativo debe tener windows 10 de 64 bits. En caso de no tenerlo, puede regularizar la firma digital en el CENATE.
+
+    </p>
   </div>
 </div>
 
