--- a/datosti.html
+++ b/datosti.html
@@ -29,9 +29,9 @@
     <div class="login-box">
       <div class="login-header">
         <div class="logo-container">
-          <img src="assets/img/logo.svg" alt="Logo" class="login-logo">
+          <img src="assets/img/LOGO CENATE2.png" alt="Logo" class="login-logo">
         </div>
-        <h1 class="login-title">Sistema Administrativo</h1>
+        <h1 class="login-title">Gestión TI</h1>
         <p class="login-subtitle">Ingrese sus credenciales</p>
       </div>
       
@@ -86,7 +86,7 @@
             <i class='bx bx-menu'></i>
           </button>
           <h1 class="logo">
-            <img src="assets/img/logo-sm.svg" alt="Logo">
+            <img src="assets/img/LOGO CENATE2.png" alt="Logo">
             <span>Panel Admin</span>
           </h1>
         </div>
