--- a/datosti.html
+++ b/datosti.html
@@ -179,7 +179,6 @@
 
 
     <!-- Main Content -->
-    <!-- Main Content -->
     <main class="admin-main" id="adminMain">
       <div class="container">
         <!-- Cabecera del panel -->
@@ -372,6 +371,13 @@
             onclick="window.open('http://10.0.89.139:8089/telemedicina/CENATE/pacs', '_blank')">
             <img src="./assets/img/Iconos_ESSI.svg" alt="PACS" class="card-img" style="width: 80px; height: auto">
             <span>PACS</span>
+          </div>
+
+              <!-- Reprogramaciones -->
+          <div class="card" data-category="aplicativo"
+            onclick="window.open('https://docs.google.com/spreadsheets/d/1jYAy5O6fD4DT7UG36O7BL_cfgp8A_ehZJF8J1n70UJo/edit?gid=620257077#gid=620257077', '_blank')">
+            <img src="./assets/img/Iconos_ESSI.svg" alt="PACS" class="card-img" style="width: 80px; height: auto">
+            <span>Drive de Reprogramaciones</span>
           </div>
 
           <!-- Bienes Tecnológicos -->
