Nuevos botones de drives

--- a/datosti.html
+++ b/datosti.html
@@ -357,14 +357,22 @@
           <!-- Reprogramaciones -->
           <div class="card" data-category="aplicativo"
             onclick="window.open('https://docs.google.com/spreadsheets/d/1jYAy5O6fD4DT7UG36O7BL_cfgp8A_ehZJF8J1n70UJo/edit?gid=620257077#gid=620257077', '_blank')">
-            <img src="./assets/img/Iconos_ESSI.svg" alt="PACS" class="card-img" style="width: 80px; height: auto">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img" style="width: 60px; margin: 5px; height: auto">
             <span>Drive de Reprogramaciones</span>
           </div>
 
-              <!-- Tabla Maestro Personal -->
+           <!-- Soporte TC y TO -->
+          <div class="card" data-category="aplicativo"
+            onclick="window.open('https://docs.google.com/spreadsheets/d/1vuUixgOXkYnXo1Q1Hsj6GeMJa3Kn0vBiQTz4ISpUbhk/edit?gid=1326387880#gid=1326387880', '_blank')">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img" style="width: 60px; margin: 5px; height: auto">
+            <span>Soporte TC y TO</span>
+          </div>
+
+          <!-- Tabla Maestro Personal -->
           <div class="card" data-category="aplicativo"
             onclick="window.open('https://docs.google.com/spreadsheets/d/16TsSjo2cEBVkknyCILbh5njomTGE6FL4pmAAv7uJ-V0/edit?gid=0#gid=0', '_blank')">
-            <img src="./assets/img/BASE DE DATOS.png" alt="PACS" class="card-img" style="width: 80px;  margin: 8px; height: auto">
+            <img src="./assets/img/BASE DE DATOS.png" alt="PACS" class="card-img"
+              style="width: 80px;  margin: 8px; height: auto">
             <span>Tabla Maestro Personal</span>
           </div>
 
@@ -591,6 +599,16 @@
             <img src="./assets/img/Iconos_ESSI.svg" alt="Inventario" class="card-img" style="width: 80px; height: auto">
             <span>Inventario</span>
           </div>
+
+
+          <div class="card" data-category="bienes"
+            onclick="window.open('https://docs.google.com/spreadsheets/d/18QhFRwqcbiN5OZXXv6ImdSrtDrRiP9yb_KZ9L2nPcto/edit?gid=0', '_blank')"
+            role="button" tabindex="0" aria-label="Abrir hoja de Asignación de celulares">
+            <img src="./assets/img/Iconos_ESSI.svg" alt="Ícono de Inventario" class="card-img"
+              style="width: 80px; height: auto;" />
+            <span>Asignación de celulares</span>
+          </div>
+
 
           <!-- Manuales -->
           <div class="card" data-category="manuales"
