--- a/datosti.html
+++ b/datosti.html
@@ -204,12 +204,20 @@
 
 
           <!-- Tarjeta de acceso a cuentas Zoom -->
-          <div id="cardZoom" class="card" data-category="aplicativo">
+          <div id="cardZoom" class="card" data-category="contraseñas">
             <img src="./assets/img/Zoom.svg" alt="Sala Zoom" class="card-img"
               style="width: 70px; margin: 8px;  height: auto">
             <span>Cuentas Zoom</span><br>
 
           </div>
+
+          <div class="card" data-category="aplicativo"
+          onclick="window.open('https://us02web.zoom.us/j/81483580541?pwd=9JHZ44eQKPv11MuTATtuyw9jDf9uJ7.1#success', '_blank')">
+          <img src="./assets/img/Zoom.svg" alt="ESSI" class="card-img"
+            style="width: 70px; margin: 8px;  height: auto">
+          <span>Link zoom especialidades</span>
+        </div>
+
 
           <!-- Modal de cuentas Zoom -->
           <div id="modalZoom" class="util-modal">
@@ -609,6 +617,22 @@
             <span>Asignación de celulares</span>
           </div>
 
+
+          <div class="card" data-category="bienes"
+          onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:x:/g/personal/cenate_calidad_essalud_gob_pe/ETdTY0HoCgVHotcG2nMUIv8BI2KBoqYgkHTMfvm58eXk6Q?e=0jvKci', '_blank')"
+          role="button" tabindex="0" aria-label="Registro de Tickets a GCTI">
+          <img src="./assets/img/DRIVE.png" alt="Ícono de Inventario" class="card-img"
+            style="width: 50px; margin:8px; height: auto;" />
+          <span>Registro de Tickets a GCTIC</span>
+        </div>
+
+        <div class="card" data-category="bienes"
+        onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:x:/g/personal/cenate_calidad_essalud_gob_pe/EVwPqEutCWlIh1w1eHmA6VUBFmRq7sx4LrLRwK5PktcHag?e=7Cvplh', '_blank')"
+        role="button" tabindex="0" aria-label="Registro de Incidencias y Requerimientos informaticoss">
+        <img src="./assets/img/DRIVE.png" alt="Ícono de Inventario" class="card-img"
+          style="width: 50px; margin:8px; height: auto;" />
+        <span>Registro de incidencias</span>
+      </div>
 
           <!-- Manuales -->
           <div class="card" data-category="manuales"
