--- a/datosti.html
+++ b/datosti.html
@@ -315,6 +315,13 @@
           </div>
 
 
+          <div class="card" data-category="aplicativo"
+          onclick="window.open('http://appsgasistexpl.essalud.gob.pe/explotaDatos/index.html', '_blank')">
+          <img src="./assets/img/Iconos_Informacion de las IPRESS.svg" alt="Explotadatos" class="card-img"
+            style="width: 70px; margin: 8px;  height: auto">
+          <span>Sistema Explotadatos</span>
+        </div>
+
           <!-- PACS -->
           <div class="card" data-category="aplicativo"
             onclick="window.open('http://10.0.89.139:8089/telemedicina/CENATE/pacs', '_blank')">
