--- a/datosti.html
+++ b/datosti.html
@@ -212,11 +212,11 @@
           </div>
 
           <div class="card" data-category="aplicativo"
-          onclick="window.open('https://us02web.zoom.us/j/81483580541?pwd=9JHZ44eQKPv11MuTATtuyw9jDf9uJ7.1#success', '_blank')">
-          <img src="./assets/img/Zoom.svg" alt="ESSI" class="card-img"
-            style="width: 70px; margin: 8px;  height: auto">
-          <span>Link zoom especialidades</span>
-        </div>
+            onclick="window.open('https://us02web.zoom.us/j/81483580541?pwd=9JHZ44eQKPv11MuTATtuyw9jDf9uJ7.1#success', '_blank')">
+            <img src="./assets/img/Zoom.svg" alt="ESSI" class="card-img"
+              style="width: 70px; margin: 8px;  height: auto">
+            <span>Link zoom especialidades</span>
+          </div>
 
 
           <!-- Modal de cuentas Zoom -->
@@ -316,11 +316,20 @@
 
 
           <div class="card" data-category="aplicativo"
-          onclick="window.open('http://appsgasistexpl.essalud.gob.pe/explotaDatos/index.html', '_blank')">
-          <img src="./assets/img/Iconos_Informacion de las IPRESS.svg" alt="Explotadatos" class="card-img"
-            style="width: 70px; margin: 8px;  height: auto">
-          <span>Sistema Explotadatos</span>
-        </div>
+            onclick="window.open('http://appsgasistexpl.essalud.gob.pe/explotaDatos/index.html', '_blank')">
+            <img src="./assets/img/Iconos_Informacion de las IPRESS.svg" alt="Explotadatos" class="card-img"
+              style="width: 70px; margin: 8px;  height: auto">
+            <span>Sistema Explotadatos</span>
+          </div>
+
+
+          <div class="card" data-category="aplicativo"
+            onclick="window.open('https://apps.essalud.gob.pe/backoffice-citas/auth/login', '_blank')">
+            <img src="./assets/img/Iconos_Informacion de las IPRESS.svg" alt="Explotadatos" class="card-img"
+              style="width: 70px; margin: 8px;  height: auto">
+            <span>BackOffice</span>
+          </div>
+
 
           <!-- PACS -->
           <div class="card" data-category="aplicativo"
@@ -372,15 +381,34 @@
           <!-- Reprogramaciones -->
           <div class="card" data-category="aplicativo"
             onclick="window.open('https://docs.google.com/spreadsheets/d/1jYAy5O6fD4DT7UG36O7BL_cfgp8A_ehZJF8J1n70UJo/edit?gid=620257077#gid=620257077', '_blank')">
-            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img" style="width: 60px; margin: 5px; height: auto">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img"
+              style="width: 60px; margin: 5px; height: auto">
             <span>Drive de Reprogramaciones</span>
           </div>
 
-           <!-- Soporte TC y TO -->
+          <!-- Soporte TC y TO -->
           <div class="card" data-category="aplicativo"
             onclick="window.open('https://docs.google.com/spreadsheets/d/1vuUixgOXkYnXo1Q1Hsj6GeMJa3Kn0vBiQTz4ISpUbhk/edit?gid=1326387880#gid=1326387880', '_blank')">
-            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img" style="width: 60px; margin: 5px; height: auto">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img"
+              style="width: 60px; margin: 5px; height: auto">
             <span>Soporte TC y TO</span>
+          </div>
+
+
+          <!-- Bolsas Pacientes Lima -->
+          <div class="card" data-category="aplicativo"
+            onclick="window.open('https://docs.google.com/spreadsheets/d/1M-_KnfbggzgU1HriaRcFOLUjkYhhPs2b/edit?rtpof=true&gid=636278326#gid=636278326', '_blank')">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img"
+              style="width: 60px; margin: 5px; height: auto">
+            <span>Bolsa Pacientes Lima</span>
+          </div>
+
+          <!-- Bolsa Pacientes Provincia -->
+          <div class="card" data-category="aplicativo"
+            onclick="window.open('https://docs.google.com/spreadsheets/d/1VLDPWtAPNnboz_iUW5O2EgkniqWiPrqz/edit?rtpof=true', '_blank')">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img"
+              style="width: 60px; margin: 5px; height: auto">
+            <span>Bolsa Pacientes Provincia</span>
           </div>
 
           <!-- Tabla Maestro Personal -->
@@ -626,20 +654,20 @@
 
 
           <div class="card" data-category="bienes"
-          onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:x:/g/personal/cenate_calidad_essalud_gob_pe/ETdTY0HoCgVHotcG2nMUIv8BI2KBoqYgkHTMfvm58eXk6Q?e=0jvKci', '_blank')"
-          role="button" tabindex="0" aria-label="Registro de Tickets a GCTI">
-          <img src="./assets/img/DRIVE.png" alt="Ícono de Inventario" class="card-img"
-            style="width: 50px; margin:8px; height: auto;" />
-          <span>Registro de Tickets a GCTIC</span>
-        </div>
+            onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:x:/g/personal/cenate_calidad_essalud_gob_pe/ETdTY0HoCgVHotcG2nMUIv8BI2KBoqYgkHTMfvm58eXk6Q?e=0jvKci', '_blank')"
+            role="button" tabindex="0" aria-label="Registro de Tickets a GCTI">
+            <img src="./assets/img/DRIVE.png" alt="Ícono de Inventario" class="card-img"
+              style="width: 50px; margin:8px; height: auto;" />
+            <span>Registro de Tickets a GCTIC</span>
+          </div>
 
-        <div class="card" data-category="bienes"
-        onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:x:/g/personal/cenate_calidad_essalud_gob_pe/EVwPqEutCWlIh1w1eHmA6VUBFmRq7sx4LrLRwK5PktcHag?e=7Cvplh', '_blank')"
-        role="button" tabindex="0" aria-label="Registro de Incidencias y Requerimientos informaticoss">
-        <img src="./assets/img/DRIVE.png" alt="Ícono de Inventario" class="card-img"
-          style="width: 50px; margin:8px; height: auto;" />
-        <span>Registro de incidencias</span>
-      </div>
+          <div class="card" data-category="bienes"
+            onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:x:/g/personal/cenate_calidad_essalud_gob_pe/EVwPqEutCWlIh1w1eHmA6VUBFmRq7sx4LrLRwK5PktcHag?e=7Cvplh', '_blank')"
+            role="button" tabindex="0" aria-label="Registro de Incidencias y Requerimientos informaticoss">
+            <img src="./assets/img/DRIVE.png" alt="Ícono de Inventario" class="card-img"
+              style="width: 50px; margin:8px; height: auto;" />
+            <span>Registro de incidencias</span>
+          </div>
 
           <!-- Manuales -->
           <div class="card" data-category="manuales"
