Modificacion de criterios

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <div class="criterios-content">
             <button id="cerrarCriterios" class="btn-close-top">X</button>
             <h3 class="mesa-ayuda-titulo">Criterios de Inclusión y Exclusión</h3>
-            <img src="./assets/img/criterios.jpeg" alt="Criterios de inclusión y exclusión" />
+            <img src="./assets/img/criterios_nuevo.jpeg" alt="Criterios de inclusión y exclusión" />
             <p class="texto-imagen-descripcion">Esta imagen resume los lineamientos que rigen la inclusión y exclusión
               de pacientes en la estrategia.</p>
           </div>
