Boton de programacion de julio

--- a/datosti.html
+++ b/datosti.html
@@ -376,6 +376,13 @@
             <span style="font-size: 12px">Referencia y Contrareferencias</span>
           </div>
 
+          <!-- Programacion de Julio -->
+          <div class="card" data-category="aplicativo"
+            onclick="window.open('https://docs.google.com/spreadsheets/d/1oYRdPlHE3Hx2Y-q4lJ7bS-yyb7jEKejC9pq2u85BEGA/edit?gid=1136526116#gid=1136526116', '_blank')">
+            <img src="./assets/img/DRIVE.png" alt="PACS" class="card-img"
+              style="width: 60px; margin: 5px; height: auto">
+            <span>Programación de Mes de Julio</span>
+          </div>
 
 
           <!-- Reprogramaciones -->
