Nuevas opciones de manual de TC y TO

--- a/datosti.html
+++ b/datosti.html
@@ -678,10 +678,18 @@
 
           <!-- Manuales -->
           <div class="card" data-category="manuales"
-            onclick="window.open('http://10.0.89.139:8089/telemedicina/CENATE/pacs', '_blank')">
+            onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/my?id=%2Fpersonal%2Fcenate%5Fcalidad%5Fessalud%5Fgob%5Fpe%2FDocuments%2FCENATE%20%2D%20SGC%2FPS%2E2%20GESTI%C3%93N%20DE%20TI%2F3%2E%20Registros%2F0%2E%20Manuales%20detallados%20de%20TI%2F7%2E2%2E%20Soporte%20TI%20%2D%20TC%20y%20TO%2FPE%2EREG%2E06%20MANUAL%20DETALLADO%20%2D%20%20Programacion%20en%20TC%20y%20TO%2Epdf&parent=%2Fpersonal%2Fcenate%5Fcalidad%5Fessalud%5Fgob%5Fpe%2FDocuments%2FCENATE%20%2D%20SGC%2FPS%2E2%20GESTI%C3%93N%20DE%20TI%2F3%2E%20Registros%2F0%2E%20Manuales%20detallados%20de%20TI%2F7%2E2%2E%20Soporte%20TI%20%2D%20TC%20y%20TO', '_blank')">
             <img src="./assets/img/Iconos_ESSI.svg" alt="Manuales" class="card-img" style="width: 80px; height: auto">
-            <span>Manuales</span>
+            <span>Manual de Programación TC y TO</span>
           </div>
+
+          <div class="card" data-category="manuales"
+          onclick="window.open('https://docs.google.com/spreadsheets/d/1i6wVZ-cVBzdYjviEBACvbHFsQJE0Ye6q43DTImmv--E/edit?gid=0#gid=0', '_blank')">
+          <img src="./assets/img/DRIVE.png" alt="Manuales" class="card-img" style="width: 80px; height: auto">
+          <span>Datos para programar TC y TO</span>
+        </div>
+
+        
 
           <!-- Instaladores -->
           <div class="card" data-category="instaladores"
