--- a/datosti.html
+++ b/datosti.html
@@ -736,6 +736,12 @@
             <span>Manual de instalación FortiClient</span>
           </div>
 
+             <div class="card" data-category="manuales"
+            onclick="window.open('https://segurosocialdesalud-my.sharepoint.com/:b:/g/personal/cenate_calidad_essalud_gob_pe/EU66KmYEqOlBsIa9VxmLBegBW4XOP8kiF9DzlGkXdPNzmA?e=rDV4py', '_blank')">
+            <img src="./assets/img/Iconos_ESSI.svg" alt="Manuales" class="card-img" style="width: 80px; height: auto">
+            <span>Parametrización de los centros de farmacia</span>
+          </div>
+
 
           <!-- Instaladores -->
           <div class="card" data-category="instaladores"
